Fixing spacing under What are you looking for

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -4080,7 +4080,8 @@ figure.align-center figcaption {
       letter-spacing: -1.2px; } }
   @media (min-width: 769px) {
     .home-search .home-search__title {
-      margin-top: 40px; } }
+      margin-top: 40px;
+      margin-bottom: 40px; } }
   @media (min-width: 1050px) {
     .home-search .home-search__title {
       margin-top: 56px; } }
