--- a/docroot/themes/custom/ucsf/scss/node/_node-homepage.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-homepage.scss
@@ -413,6 +413,7 @@
 
   @include breakpoint($new-small) {
     margin-top: $space-five;
+    margin-bottom: $space-five;
   }
 
   @include breakpoint($new-large) {
